--- a/app/assets/stylesheets/sing.css
+++ b/app/assets/stylesheets/sing.css
@@ -3,4 +3,9 @@
 }
 .ab{
   text-align: center; 
+  background-image: url("ベイスターズ　ホーム　ユニ　模様.jpg");
+  background-repeat: no-repeat;
+  background-size: 1250px 5350px;
+  background-blend-mode: overlay;
+  background-color: rgba(#fff, 0.2);
 }
