--- a/app/assets/stylesheets/schedule.css
+++ b/app/assets/stylesheets/schedule.css
@@ -1,6 +1,6 @@
 .schedule{
    
-   background-image: url("キャッチボール　スターマン.jpg");
+   background-image: url("かわいい背景2.jpg");
    background-repeat: no-repeat;
    background-size:1250px 1200px;
    color: white;
