--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                     <%= link_to 'アクセス', yokohamas_access_path %>
                 </li>
                 <li>
-                    <%= link_to '球団の歴史', yokohamas_history_path %>
+                    <%= link_to 'ヒストリー', yokohamas_history_path %>
                 </li>
                 <li>
                     <%= link_to '選手・監督紹介', yokohamas_introduce_path %>
