--- a/app/views/yokohamas/edit.html.erb
+++ b/app/views/yokohamas/edit.html.erb
@@ -5,7 +5,7 @@
     <%= f.select :home, 
     [["横浜DeNAベイスターズ", "横浜DeNAベイスターズ"], 
     ["阪神タイガース", "阪神タイガース"], 
-    ["東京読売ジャイアンツ", "東京読売ジャイアンツ"],
+    ["読売ジャイアンツ", "読売ジャイアンツ"],
     ["広島東洋カープ", "広島東洋カープ"],
     ["東京ヤクルトスワローズ", "東京ヤクルトスワローズ"],
     ["中日ドラゴンズ", "中日ドラゴンズ"],
@@ -23,7 +23,7 @@
     <%= f.select :away, 
      [["横浜DeNAベイスターズ", "横浜DeNAベイスターズ"], 
     ["阪神タイガース", "阪神タイガース"], 
-    ["東京読売ジャイアンツ", "東京読売ジャイアンツ"],
+    ["読売ジャイアンツ", "読売ジャイアンツ"],
     ["広島東洋カープ", "広島東洋カープ"],
     ["東京ヤクルトスワローズ", "東京ヤクルトスワローズ"],
     ["中日ドラゴンズ", "中日ドラゴンズ"],
