Webサービス　DBと接続

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
         <div class="menu-content">
             <ul>
                 <li>
+                    <%= link_to "新規投稿へ", new_yokohama_path %>
+                </li>
+                <li>
                     <%= link_to 'アクセス', yokohamas_access_path %>
                 </li>
                 <li>
